claude code の並走テスト

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,10 +2,14 @@
 
 name: Test Artifact Workflow
 
+# on:
+#  push:
+#    branches:
+#      - main
+
+
 on:
-  push:
-    branches:
-      - main
+    workflow_dispatch:  # 手動実行のみ
 
 jobs:
   create-artifact:
